--- a/CNLCI/CNLCI.csproj
+++ b/CNLCI/CNLCI.csproj
@@ -160,12 +160,11 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
-    <Compile Include="App_Start\JustificantesController.cs" />
-    <Compile Include="App_Start\ReportestController.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\JustificantesController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -222,18 +221,20 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Account\SignOutCallback.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
     <Content Include="Views\Justificantes\Justificante.cshtml" />
+    <Content Include="Views\Reportes\PorAlumno.cshtml" />
+    <Content Include="Views\Reportes\PorGrupo.cshtml" />
+    <Content Include="Views\Reportes\PorCarrera.cshtml" />
+    <Content Include="Views\Reportes\PorSemestre.cshtml" />
+    <Content Include="Views\Justificantes\PaseDeSalida.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Reportest\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
