--- a/CNLCI/Web.config
+++ b/CNLCI/Web.config
@@ -19,6 +19,7 @@
     <add key="ida:TenantId" value="b25de60b-7819-429c-a7d2-9771eb22587f" />
     <add key="ida:PostLogoutRedirectUri" value="https://localhost:44300/signin-oidc" />
   </appSettings>
+	
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
@@ -86,12 +87,12 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DB" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KASKAR\SQLEXPRESS;initial catalog=CONALEPcheckin;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+	  <add name="DB" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KASKAR\SQLEXPRESS;initial catalog=CONALEPcheckin;persist security info=True;user id=sa;password=1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	
 </configuration>
