--- a/CNLCI/CNLCI.csproj
+++ b/CNLCI/CNLCI.csproj
@@ -175,6 +175,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ConfiguracionController.cs" />
+    <Compile Include="Controllers\HistorialController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JustificantesController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -225,6 +226,7 @@
       <DependentUpon>CNL.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ViewModel\MJ.cs" />
+    <Compile Include="Models\ViewModel\ReporteA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -268,6 +270,7 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="App_Browsers\qt.browser" />
     <EntityDeploy Include="Models\CNL.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>CNL.Designer.cs</LastGenOutput>
@@ -275,7 +278,6 @@
     <Content Include="Models\CNL.edmx.diagram">
       <DependentUpon>CNL.edmx</DependentUpon>
     </Content>
-    <Content Include="App_Browsers\qt.browser" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\chart.js" />
     <Content Include="Scripts\chart.min.js" />
@@ -322,9 +324,19 @@
     <Content Include="Views\Configuracion\Importar.cshtml" />
     <Content Include="Views\Justificantes\PDFPase.cshtml" />
     <Content Include="Views\Justificantes\PDFJustificante.cshtml" />
+    <Content Include="Views\Justificantes\_Carrera.cshtml" />
+    <Content Include="Views\Justificantes\_Autoriza.cshtml" />
+    <Content Include="Views\Historial\PaseS.cshtml" />
+    <Content Include="Views\Historial\PDFPase.cshtml" />
+    <Content Include="Views\Justificantes\_Fecha.cshtml" />
+    <Content Include="Views\Historial\PDFJustificante.cshtml" />
+    <Content Include="Views\Historial\_Fecha.cshtml" />
+    <Content Include="Views\Historial\Justificante.cshtml" />
+    <Content Include="Views\Configuracion\Alumno.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="ArchivosPDF\" />
     <Folder Include="ArchivosPI\" />
   </ItemGroup>
   <ItemGroup>
