--- a/CNLCI/bin/CNLCI.dll.config
+++ b/CNLCI/bin/CNLCI.dll.config
@@ -23,6 +23,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+	  <sessionState mode="InProc" timeout="1" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -87,7 +88,9 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-	<add name="DB" connectionString="metadata=res://*/Models.CNL.csdl|res://*/Models.CNL.ssdl|res://*/Models.CNL.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KASKAR\SQLEXPRESS;initial catalog=CONALEPcheckin;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+	  
+	  
+  <add name="DB" connectionString="metadata=res://*/Models.CNL.csdl|res://*/Models.CNL.ssdl|res://*/Models.CNL.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KASKAR\SQLEXPRESS;initial catalog=CONALEPcheckin;persist security info=True;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
