--- a/CNLCI/bin/CNLCI.dll.config
+++ b/CNLCI/bin/CNLCI.dll.config
@@ -90,7 +90,13 @@
   <connectionStrings>
 	  
 	  
-  <add name="DB" connectionString="metadata=res://*/Models.CNL.csdl|res://*/Models.CNL.ssdl|res://*/Models.CNL.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KASKAR\SQLEXPRESS;initial catalog=CONALEPcheckin;persist security info=True;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+	  
+	  
+	  
+	  
+	  
+	  
+  <add name="DB" connectionString="metadata=res://*/Models.CNL.csdl|res://*/Models.CNL.ssdl|res://*/Models.CNL.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KASKAR\SQLEXPRESS;initial catalog=CONALEPcheckin;persist security info=True;user id=sa;password=1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
